feat: Update .env.example + types

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 PORT=
 HOST=
 S3_INFO=
-API_KEY=
 S3_BUCKET=
 MAIL_INFO=
 SESSION_KEY=
@@ -9,8 +8,8 @@ FRONTEND_URL=
 DATABASE_URL=
 DISCORD_GUILD_ID=
 TESTIMONY_CHANNEL=
-DISCORD_USER_ROLE=
 DISCORD_BOT_TOKEN=
 DISCORD_CLIENT_ID=
 DISCORD_OAUTH_SCOPES=
+DISCORD_LINKED_ROLES=
 DISCORD_CLIENT_SECRET=
