--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "handlebars": "^4.7.7",
     "joi": "^17.5.0",
     "nodemailer": "^6.7.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "redis": "^4.0.3"
   },
   "devDependencies": {
     "@prisma/client": "^3.9.1",
